loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: ')' expected but '<-' found.
if (i <- 1 to n) {
      ^LoopFor:13: error: illegal start of simple expression
	}
        ^