loopfor.LoopFor.scala.code
var n = 0
while (!estSurBiscuit()) {
  avance()
  n = n+1
}
prendBiscuit()
if (i <- 1 to n) {
  recule()
  poseBiscuit()
}
